Fixed EU28 label not showing in some economic and sector profile charts while maximizing. Fixed see more z-index in regulation page. More improvements on Income per capita chart trying to fix overlapping labels and values.

--- a/static/custom/scss/common.scss
+++ b/static/custom/scss/common.scss
@@ -904,7 +904,7 @@
           margin: 3rem 0 1rem;
           background: url(../img/back-button.png);
           position: relative;
-          z-index: -1;
+          //z-index: -1;
           a{
             text-decoration:none;
             color: $aquamarine;
